--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Launch Program",
-			"program": "${workspaceFolder}\\index.js",
+			"program": "${workspaceFolder}\\src\\index.js",
 			"args": [
-				"-h", "192.168.0.10",
+				"-h", "localhost",
 				"-p", "502"
 			],
 			"console": "externalTerminal"
